        PR c++/26696         * cvt.c (convert_to_void): Replace a subexpression with no side         effects with void_zero_node.         * tree.c (is_overloaded_fn): Look through COMPONENT_REF.         (get_first_fn): Ditto.         * decl.c (grokdeclarator): No need to look through COMPONENT_REF.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116724 138bc75d-0d04-0410-961f-82ee72b054a4